--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/boarddata
 spring.datasource.username=hanum
 spring.datasource.password=pass
+
 
 spring.jpa.hibernate.ddl-auto=update
 
