--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/boarddata
-spring.datasource.username=hanum
-spring.datasource.password=pass
+# spring.datasource.url=jdbc:postgresql://localhost:5432/boarddata
+# spring.datasource.username=hanum
+# spring.datasource.password=pass
 
 
 spring.jpa.hibernate.ddl-auto=update
