--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@
 # spring.datasource.username=hanum
 # spring.datasource.password=pass
 
+logging.level.root=debug
 
 spring.jpa.hibernate.ddl-auto=update
 
